logique de calcul a revoir

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <input type="text" id="kalvinT" placeholder="Enter Temperature">
         </div>
 
+        <p id="resultat"></p>
+
     </div>
     <script src="tempConverter.js"></script>
 </body>
