section calcul celsius a F et K terminer

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
         <h1>Temperature Converter</h1>
         <div class="celsius" >
             <label for="celsiusTem">Celsius :</label>
-            <input type="text" id="celsiusT" placeholder="Enter Temperature">
+            <input type="text" id="celsiusT" placeholder="Enter Temperature" />
         </div>
         <div class="fahreneit">
             <label for="fahreneit">Fahreneit :</label>
-            <input type="text" id="fahreneitT" placeholder="Enter Temperature">
+            <input type="text" id="fahreneitT" placeholder="Enter Temperature" />
         </div>
         <div class="kalvin">
             <label for="kalvin">Kalvin :</label>
-            <input type="text" id="kalvinT" placeholder="Enter Temperature">
+            <input type="text" id="kalvinT" placeholder="Enter Temperature" />
         </div>
-
-        <p id="resultat"></p>
-
     </div>
     <script src="tempConverter.js"></script>
 </body>
