correction d'erreur terminer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <label for="celsiusTem">Celsius :</label>
             <input type="text" id="celsiusT" placeholder="Enter Temperature" />
         </div>
-        <div class="fahreneit">
-            <label for="fahreneit">Fahreneit :</label>
-            <input type="text" id="fahreneitT" placeholder="Enter Temperature" />
+        <div class="fahrenheit">
+            <label for="fahrenheit">Fahrenheit :</label>
+            <input type="text" id="fahrenheitT" placeholder="Enter Temperature" />
         </div>
         <div class="kalvin">
             <label for="kalvin">Kalvin :</label>
