reconstruction du style d'interface d'utilisateur

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     
     <div class="container">
         <h1>Temperature Converter</h1>
-        <div class="celsius" >
+        <div class="temp-container" >
             <label for="celsiusTem">Celsius :</label>
             <input type="text" id="celsiusT" placeholder="Enter Temperature" />
         </div>
-        <div class="fahrenheit">
+        <div class="temp-container">
             <label for="fahrenheit">Fahrenheit :</label>
             <input type="text" id="fahrenheitT" placeholder="Enter Temperature" />
         </div>
-        <div class="kalvin">
+        <div class="temp-container">
             <label for="kalvin">Kalvin :</label>
             <input type="text" id="kalvinT" placeholder="Enter Temperature" />
         </div>
